deploy: 4e6f9318e6278d9b61957f2257bf94542da26e80

--- a/iframe.html
+++ b/iframe.html
@@ -529,8 +529,9 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BXPoJ67F.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Kn7J3LbR.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/preload-helper-D9Z9MdNV.js">
+    <link rel="stylesheet" crossorigin href="./assets/iframe-TWuTkpfU.css">
   </head>
 
   <body>
