--- a/iframe.html
+++ b/iframe.html
@@ -529,9 +529,9 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CwB2PCTl.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BK7tEmKZ.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/preload-helper-D9Z9MdNV.js">
-    <link rel="stylesheet" crossorigin href="./assets/iframe-uByOfg5q.css">
+    <link rel="stylesheet" crossorigin href="./assets/iframe-BkgaiyAq.css">
   </head>
 
   <body>
