--- a/iframe.html
+++ b/iframe.html
@@ -529,7 +529,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BK7tEmKZ.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CYs1Zwv6.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/preload-helper-D9Z9MdNV.js">
     <link rel="stylesheet" crossorigin href="./assets/iframe-BkgaiyAq.css">
   </head>
